[package]
name = "rustybits"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "rlib"]

[features]
default = ["zeroidc"]
zeroidc = []
ztcontroller = [
    "dep:serde",
    "dep:temporal-sdk",
    "dep:temporal-client",
    "dep:temporal-sdk-core-protos",
    "dep:gcloud-pubsub",
]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
temporal-sdk = { git = "https://github.com/temporalio/sdk-core", branch = "master", optional = true }
temporal-client = { git = "https://github.com/temporalio/sdk-core", branch = "master", optional = true, features = [
    "telemetry",
] }
temporal-sdk-core-protos = { git = "https://github.com/temporalio/sdk-core", branch = "master", optional = true }
tokio = { version = "1.43", features = ["full"] }
uuid = { version = "1.4", features = ["v4"] }
openidconnect = { version = "3.4", default-features = false, features = [
    "reqwest",
    "native-tls",
    "accept-rfc3339-timestamps",
] }
base64 = "0.21"
url = "2.3"
reqwest = "0.11"
jwt = { version = "0.16", git = "https://github.com/glimberg/rust-jwt" }
time = { version = "~0.3", features = ["formatting"] }
bytes = "1.3"
thiserror = "1"
gcloud-pubsub = { version = "1.3.0", optional = true }

[build-dependencies]
cbindgen = "0.29"

[profile.release]
strip = "debuginfo"
