[package]
name = "rustybits"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "rlib"]

[features]
default = ["zeroidc"]
zeroidc = []
ztcontroller = [
    "dep:serde",
    "dep:serde_json",
    "dep:temporal-sdk",
    "dep:temporal-client",
    "dep:temporal-sdk-core-protos",
    "dep:tokio",
    "dep:tokio-util",
]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
temporal-sdk = { git = "https://github.com/temporalio/sdk-core", branch = "master", optional = true }
temporal-client = { git = "https://github.com/temporalio/sdk-core", branch = "master", optional = true, features = [
    "telemetry",
] }
temporal-sdk-core-protos = { git = "https://github.com/temporalio/sdk-core", branch = "master", optional = true }
tokio = { version = "1.43", features = [
    "full",
    "rt",
    "macros",
], optional = true }
tokio-util = { version = "0.7", optional = true }
uuid = { version = "1.4", features = ["v4"] }
openidconnect = { version = "3.4", default-features = false, features = [
    "reqwest",
    "native-tls",
    "accept-rfc3339-timestamps",
] }
base64 = "0.21"
url = "2.3"
reqwest = "0.11"
jwt = { version = "0.16", git = "https://github.com/glimberg/rust-jwt" }
time = { version = "~0.3", features = ["formatting"] }
bytes = "1.3"
thiserror = "1"

[dev-dependencies]
testcontainers = { version = "0.24", features = ["blocking"] }
testcontainers-modules = { version = "0.12.1", features = [
    "google_cloud_sdk_emulators",
] }

[build-dependencies]
cbindgen = "0.29"
prost-build = "0.14"

[profile.release]
strip = "debuginfo"
